metadataPackage_1602884205764/objects/PolicyBranch__c.object
<CustomObject>
    <label>Policy Branch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Branch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_EN_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L_EN_CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_FR_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L_FR_CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retired</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>TypeCode</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L_FR_CA__c</columns>
        <columns>Description__c</columns>
        <columns>TypeCode__c</columns>
        <columns>L_EN_CA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
</CustomObject>